fix(components): retouches Collapse & Carousel

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -48,6 +48,7 @@
             height: 111px;
 
             h1 {
+                width: 59%;
                 font-size: 24px;
                 line-height: 24px;
                 text-align: left;
