--- a/src/components/Collapse/Collapse.module.scss
+++ b/src/components/Collapse/Collapse.module.scss
@@ -36,9 +36,6 @@
         color: $color1;
         border-radius: 5px 5px 10px 10px;
         overflow: hidden;
-    }
-
-    .active {
         padding: 25px 25px;
         opacity: 1;
         animation: fadeIn ease-in-out 0.5s forwards;
