--- a/src/components/Properties/Card/Card.module.scss
+++ b/src/components/Properties/Card/Card.module.scss
@@ -15,8 +15,8 @@
     .gradient {
         position: absolute;
         top: 0;
-        width: 335px;
-        height: 335px;
+        width: 100%;
+        height: 100%;
         border-radius: 10px;
         background: linear-gradient(to bottom, rgba(255, 255, 255, 0.4) 50%, rgba(0, 0, 0, 0.8) 85%);
 
